feat(app): integrate Tailwind CSS plugin with Prettier and update component styles

--- a/app/src/app/public/components/header/header.component.html
+++ b/app/src/app/public/components/header/header.component.html
@@ -1,7 +1,6 @@
 <header
   class="flex gap-4 bg-blue-600 p-2 text-white"
-  [ngClass]="{ 'justify-between': showTitle, 'justify-end': !showTitle }"
->
+  [ngClass]="{ 'justify-between': showTitle, 'justify-end': !showTitle }">
   @if (showTitle) {
     <h2>CharBoard</h2>
   }
