--- a/app/src/app/public/public-layout/public-layout.component.html
+++ b/app/src/app/public/public-layout/public-layout.component.html
@@ -1,4 +1,4 @@
-<article class="h-full w-full flex flex-col">
+<article class="flex h-full w-full flex-col">
   <app-header></app-header>
 
   <main class="h-full w-full bg-[#F6F6F6]">
