--- a/app/src/app/public/pages/home-page/home-page.component.html
+++ b/app/src/app/public/pages/home-page/home-page.component.html
@@ -1,3 +1,3 @@
-<section class="flex flex-col items-center px-2 py-4 h-full">
+<section class="flex h-full flex-col items-center px-2 py-4">
   <h1 class="text-3xl font-bold">ChatBoard</h1>
 </section>
