feat(app): implement chat page with dynamic message display

--- a/app/src/app/secure/components/chat-preview/chat-preview.component.html
+++ b/app/src/app/secure/components/chat-preview/chat-preview.component.html
@@ -1,5 +1,5 @@
 <article class="w-full">
-  <a class="flex items-center gap-4 p-2">
+  <a class="flex items-center gap-4 p-2" [routerLink]="'' + id">
     <img [ngSrc]="avatarUrl" alt="Chat avatar" width="50" height="50" />
 
     <div class="flex w-full flex-col gap-1">
