--- a/app/src/app/secure/components/header/header.component.html
+++ b/app/src/app/secure/components/header/header.component.html
@@ -1,6 +1,6 @@
-<header class="flex items-center justify-between gap-2 bg-white px-2 py-3">
+<header class="flex items-center justify-between gap-2 bg-blue-600 px-2 py-3 text-white">
   <label class="burguer flex items-center justify-center border-none outline-none" for="burguer">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#999999" fill="none">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="white" fill="none">
       <path
         d="M14.8543 4H9.14613C6.6505 4 4.52893 5.96401 3.75315 8.7004C3.49773 9.6013 3.37003 10.0517 3.69086 10.5259C4.01169 11 4.53398 11 5.57854 11H18.4219C19.4664 11 19.9887 11 20.3096 10.5259C20.6304 10.0517 20.5027 9.6013 20.2473 8.7004C19.4715 5.96401 17.3499 4 14.8543 4Z"
         stroke="currentColor"
