--- a/app/src/app/secure/pages/chats-page/chats-page.component.html
+++ b/app/src/app/secure/pages/chats-page/chats-page.component.html
@@ -1,4 +1,4 @@
-<article class="flex h-full flex-col p-2 pt-0">
+<article class="flex h-full flex-col p-2">
   <form class="w-full bg-white pb-2">
     <label class="w-full" for="search">
       <input
