--- a/app/src/app/secure/pages/chat-page/chat-page.component.html
+++ b/app/src/app/secure/pages/chat-page/chat-page.component.html
@@ -1,27 +1,109 @@
 <section class="grid h-full grid-rows-[auto,1fr,auto] overflow-hidden">
-  <header class="flex items-center gap-2 border-b-2 p-2">
-    <img ngSrc="assets/images/avatar.webp" class="rounded-full" alt="User avatar" width="40" height="40" />
+  <header class="flex items-center justify-between gap-2 border-b-2 p-2">
+    <div class="flex items-center gap-2">
+      <button class="flex items-center">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000" fill="none">
+          <path
+            d="M3.99982 11.9998L19.9998 11.9998"
+            stroke="currentColor"
+            stroke-width="1.5"
+            stroke-linecap="round"
+            stroke-linejoin="round" />
+          <path
+            d="M8.99963 17C8.99963 17 3.99968 13.3176 3.99966 12C3.99965 10.6824 8.99966 7 8.99966 7"
+            stroke="currentColor"
+            stroke-width="1.5"
+            stroke-linecap="round"
+            stroke-linejoin="round" />
+        </svg>
+      </button>
 
-    <div class="flex flex-col items-center">
-      <h3 class="font-bold">Username</h3>
+      <img ngSrc="assets/images/avatar.webp" class="rounded-full" alt="User avatar" width="40" height="40" />
 
-      <p class="w-full text-sm text-gray-400">last seen</p>
+      <div class="flex flex-col items-center">
+        <h3 class="font-bold">Username</h3>
+
+        <p class="w-full text-sm text-gray-400">last seen</p>
+      </div>
     </div>
+
+    <button class="flex items-center justify-center">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000" fill="none">
+        <path
+          d="M12 3.00366C11.4383 3.01203 10.3789 3.03449 9.8294 3.07102C5.64639 3.34908 2.31441 6.72832 2.04024 10.9707C1.98659 11.8009 1.98659 12.6606 2.04024 13.4908C2.1401 15.0359 2.82343 16.4665 3.62791 17.6746C4.09501 18.5203 3.78674 19.5758 3.30021 20.4978C2.94941 21.1625 2.77401 21.4949 2.91484 21.735C3.05568 21.9752 3.37026 21.9828 3.99943 21.9981C5.24367 22.0284 6.08268 21.6757 6.74868 21.1846C7.1264 20.906 7.31527 20.7668 7.44544 20.7508C7.5756 20.7347 7.83177 20.8403 8.34401 21.0512C8.8044 21.2408 9.33896 21.3579 9.8294 21.3905C11.2536 21.4851 12.7435 21.4853 14.1706 21.3905C18.3536 21.1124 21.6856 17.7332 21.9598 13.4908C21.9915 13.0001 22.0044 12.4991 21.9987 11.9999"
+          stroke="currentColor"
+          stroke-width="1.5"
+          stroke-linecap="round"
+          stroke-linejoin="round" />
+        <path
+          d="M8.5 15H15.5M8.5 10H12"
+          stroke="currentColor"
+          stroke-width="1.5"
+          stroke-linecap="round"
+          stroke-linejoin="round" />
+        <path
+          d="M20.2649 7.27042L22 9M21.1714 5.08571C21.1714 3.38152 19.7899 2 18.0857 2C16.3815 2 15 3.38152 15 5.08571C15 6.78991 16.3815 8.17143 18.0857 8.17143C19.7899 8.17143 21.1714 6.78991 21.1714 5.08571Z"
+          stroke="currentColor"
+          stroke-width="1.5"
+          stroke-linecap="round"
+          stroke-linejoin="round" />
+      </svg>
+    </button>
   </header>
 
-  <section #messagesContainer class="flex flex-col gap-2 overflow-y-auto bg-gray-100 p-2">
+  <section #messagesContainer class="flex flex-col gap-2 overflow-y-auto bg-gray-100 p-2 px-5">
     @for (message of messages; track $index) {
-      <p
-        class="w-max max-w-[70%] rounded-xl bg-white p-2 shadow-sm"
+      <div
+        class="relative flex w-max min-w-[100px] max-w-[70%] flex-col rounded-xl bg-white px-2 py-1 shadow-sm"
         [ngClass]="{
           me: message.isMine,
         }">
-        {{ message.message }}
-      </p>
+        <p>
+          {{ message.message }}
+        </p>
+
+        <div class="flex w-full justify-end gap-1">
+          <span class="text-[12px] opacity-50">{{ message.time }}</span>
+
+          <span class="opacity-50">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              width="18"
+              height="18"
+              color="#000000"
+              fill="none">
+              <path
+                d="M3 13.3333C3 13.3333 4.5 14 6.5 17C6.5 17 6.78485 16.5192 7.32133 15.7526M17 6C14.7085 7.14577 12.3119 9.55181 10.3879 11.8223"
+                stroke="currentColor"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round" />
+              <path
+                d="M8 13.3333C8 13.3333 9.5 14 11.5 17C11.5 17 17 8.5 22 6"
+                stroke="currentColor"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round" />
+            </svg>
+          </span>
+        </div>
+      </div>
     }
   </section>
 
   <form class="flex w-full items-center gap-4 border-t-2 p-2">
+    <button class="flex items-center text-gray-500">
+      <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path
+          d="M16.1766 10L17.7208 8.4558C19.4264 6.75022 19.4264 3.98485 17.7208 2.27922C16.0151 0.573593 13.2498 0.573593 11.5442 2.27922L2.2792 11.5442C0.573598 13.2498 0.573598 16.0152 2.2792 17.7208C3.9848 19.4264 6.7502 19.4264 8.4558 17.7208L11.9302 14.2464C12.9962 13.1804 12.9962 11.4521 11.9302 10.386C10.8642 9.32 9.1358 9.32 8.0698 10.386L6.1396 12.3162"
+          stroke="currentColor"
+          stroke-width="1.5"
+          stroke-linecap="round"
+          stroke-linejoin="round" />
+      </svg>
+    </button>
+
     <label class="w-full" for="message">
       <input class="w-full outline-none" type="text" id="message" placeholder="Write a message..." />
     </label>
