--- a/app/src/app/secure/pages/chat-page/chat-page.component.html
+++ b/app/src/app/secure/pages/chat-page/chat-page.component.html
@@ -53,42 +53,7 @@
 
   <section #messagesContainer class="flex flex-col gap-2 overflow-y-auto bg-gray-100 p-2 px-5">
     @for (message of messages; track $index) {
-      <div
-        class="relative flex w-max min-w-[100px] max-w-[70%] flex-col rounded-xl bg-white px-2 py-1 shadow-sm"
-        [ngClass]="{
-          me: message.isMine,
-        }">
-        <p>
-          {{ message.message }}
-        </p>
-
-        <div class="flex w-full justify-end gap-1">
-          <span class="text-[12px] opacity-50">{{ message.time }}</span>
-
-          <span class="opacity-50">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 24 24"
-              width="18"
-              height="18"
-              color="#000000"
-              fill="none">
-              <path
-                d="M3 13.3333C3 13.3333 4.5 14 6.5 17C6.5 17 6.78485 16.5192 7.32133 15.7526M17 6C14.7085 7.14577 12.3119 9.55181 10.3879 11.8223"
-                stroke="currentColor"
-                stroke-width="1.5"
-                stroke-linecap="round"
-                stroke-linejoin="round" />
-              <path
-                d="M8 13.3333C8 13.3333 9.5 14 11.5 17C11.5 17 17 8.5 22 6"
-                stroke="currentColor"
-                stroke-width="1.5"
-                stroke-linecap="round"
-                stroke-linejoin="round" />
-            </svg>
-          </span>
-        </div>
-      </div>
+      <app-chat-message [message]="message.message" [isMine]="message.isMine" [time]="message.time"></app-chat-message>
     }
   </section>
 
