update(app): replace button with router link for navigation

--- a/app/src/app/secure/pages/chat-page/chat-page.component.html
+++ b/app/src/app/secure/pages/chat-page/chat-page.component.html
@@ -1,7 +1,7 @@
 <section class="grid h-full grid-rows-[auto,1fr,auto] overflow-hidden">
   <header class="flex items-center justify-between gap-2 border-b-2 p-2">
     <div class="flex items-center gap-2">
-      <button class="flex items-center">
+      <a routerLink="/secure/chats" class="flex items-center">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000" fill="none">
           <path
             d="M3.99982 11.9998L19.9998 11.9998"
@@ -16,7 +16,7 @@
             stroke-linecap="round"
             stroke-linejoin="round" />
         </svg>
-      </button>
+      </a>
 
       <img ngSrc="assets/images/avatar.webp" class="rounded-full" alt="User avatar" width="40" height="40" />
 
